# flux

./: .gitignore  README.md
producer/: CMakeLists.txt  VideoEncoder.cpp  config.json  main.cpp
producer/include/: VideoEncoder.h
proto/: telemetry.proto
server/: .env.example  go.mod  go.sum  main.go
server/api/: api.go  controllers.go  database.go  models.go  queries.go
server/proto/: telemetry.pb.go
server/server_interface/: server.go  service.go
